module(name = "tf_quant_finance", version="0.0.1.dev34")

# -- bazel_dep definitions -- #
bazel_dep(name = "protobuf", version = "32.0")
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "rules_python", version = "1.5.3")

# -- use_repo_rule statements -- #

# -- repo definitions -- #
